1999-03-01  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driverio.h: remove declaration of inparallel, cmdstr()
	and childstr(), declare init_driverio(), add inparallel parameter
	to startup_dump_processes().
	* server-src/driverio.c (init_driverio): new function to initialize
	dmptable and taper.
	* server-src/driverio.c (childstr): scan for all dumpers (MAX_DUMPERS)
	instead of only inparallel
	* server-src/driverio.c (startup_dump_processes): new parameter
	inparallel is used instead of global variable.
	* server-src/driver.c (main): call init_driverio.
	* server-src/driver.c (main): call startup_dump_processes with 
	inparallel parameter.
	* server-src/amflush.c (main): call init_driverio.

1999-03-01  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amrmtape.sh.in: work with "last_level" and
	"consecutive_runs" in the ouput of "amadmin export".

1999-03-01  Mike Grupenhoff <kashmir@munge.com>

	* common-src/security.h: implement security_connect callback and
	security_status_t changes

1999-03-01  Mike Grupenhoff <kashmir@munge.com>

	* common-src/bsd-security.c (bsd_connect): properly munge the uids
	to get a reserved port
	* common-src/bsd-security.c: adapt to the security_connect
	callback changes
	* common-src/bsd-security.c (bsd_sendpkt): dgram_cat is varargs now,
	so skip the vstralloc

1999-03-01  Mike Grupenhoff <kashmir@munge.com>

	* common-src/event.c: implement EV_WAIT events.  Implement macros
	for adding/removing/traversing the event queue
	* common-src/event.h: define EV_WAIT, and prototype event_wakeup()

1999-02-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* docs/WISHLIST: protocol between the driver and dumpers.

1999-02-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amtoc.pl.in: output the datestamp of each dump, because
	amflush can flush the same disk multiple date.

1999-02-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
