@@ -1,5 +1,14 @@
 1999-03-01  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
+	* server-src/driverio.h: new parameter level to update_info_taper().
+	* server-src/driverio.c (update_info_taper): use parameter instead
+	of sched(dp)->level.
+	* server-src/driver.c: call update_info_taper with level parameter.
+	* server-src/amflush.c: call update_info_taper with level parameter.
+	no longer need to create a sched_t struct.
+
+1999-03-01  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
 	* server-src/driverio.h: remove declaration of inparallel, cmdstr()
 	and childstr(), declare init_driverio(), add inparallel parameter
 	to startup_dump_processes().
